chores(clal): I'm stupid lol
